<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FileView</string>
    <string name="drawer_close">drawer close</string>
    <string name="drawer_open">drawer open</string>
    <string name="copy">copy</string>
    <string name="delete">delete</string>
    <string name="cut">cut</string>
    <string name="paste">paste</string>
    <string name="rename">rename</string>
    <string name="share">share</string>
    <string name="shortcut">shortcut</string>
    <string name="detail">detail</string>
    <string name="search">search</string>
    <string name="add_floder">new floder</string>
    <string name="str_mkdir">NewFolder</string>
    <string name="wrong_file_name">not a file name</string>
    <string name="directory_is_exist_already">A directory already exists with this name.</string>
    <string name="str_newdir_text">Please input the folder name :</string>
    <string name="str_rename_text">Please input new name :</string>
    <string name="delete_file_failed">Failed to delete </string>
    <string name="sure_delete_file">Sure to delete ?</string>
    <string name="sure_delete_file_2">Sure to delete</string>
    <string name="sure_delete_file_2_end">files ? </string>
    <string name="file_is_exist_already">A file already exists with this name.</string>
    <string name="rename_file_failed">Failed to rename file</string>
    <string name="send">Send</string>
    <string name="can_read">can read</string>
    <string name="can_write">can write</string>
    <string name="can_execute">can execute</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="size">size</string>
    <string name="path">path</string>
    <string name="lastModified">last modified</string>
    <string name="file_num">file num</string>
    <string name="no_apps_to_send">There is no application fits. </string>
    <string name="paste_file_failed">Failed to paste file</string>
    <string name="cut_file_failed">Failed to cut file</string>
    <string name="cut_file_to_clipboard">cut in clipboard</string>
    <string name="copy_file_to_clipboard">copy to clipboard</string>
    <string name="the_folder_is_empty">The folder is empty!</string>
    <string name="search_nothing">search nothing</string>
    <string name="apk_nothing">apk nothing</string>
    <string name="selected">selected</string>

    <string-array name="general_dir">
        <item>Home</item>
        <item>SD Card</item>
        <item>External SD</item>
        <item>USB Storage</item>
        <item>APK</item>
    </string-array>

</resources>