<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/copy"
        android:icon="@drawable/d_actionbar_icon_copy_enabled"
        android:title="@string/copy"/>
    <item
        android:id="@+id/delete"
        android:icon="@drawable/d_actionbar_icon_delete_enabled"
        android:title="@string/delete"/>
    <item
        android:id="@+id/cut"
        android:icon="@drawable/d_actionbar_icon_cut_enabled"
        android:title="@string/cut"/>
    <item
        android:id="@+id/rename"
        android:icon="@drawable/d_actionbar_icon_rename_enabled"
        android:title="@string/rename"/>
    <item
        android:id="@+id/share"
        android:icon="@drawable/d_actionbar_icon_share_enabled"
        android:title="@string/share"/>
    <item
        android:id="@+id/shortcut"
        android:icon="@drawable/d_actionbar_icon_pin_file_enabled"
        android:title="@string/shortcut"/>
    <item
        android:id="@+id/detail"
        android:icon="@drawable/d_actionbar_icon_properties_enabled"
        android:title="@string/detail"/>

</menu>